--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reui",
+  "name": "muli-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,13 +19,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.6",
-    "@storybook/addon-interactions": "^7.0.6",
-    "@storybook/addon-links": "^7.0.6",
-    "@storybook/blocks": "^7.0.6",
-    "@storybook/react": "^7.0.6",
-    "@storybook/react-vite": "^7.0.6",
-    "@storybook/testing-library": "0.0.14-next.2",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-vite": "^7.0.9",
+    "@storybook/testing-library": "0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.38",
@@ -37,11 +37,11 @@
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-storybook": "^0.6.12",
     "jsdom": "^21.1.1",
     "prop-types": "^15.8.1",
     "sass": "^1.62.0",
-    "storybook": "^7.0.6",
+    "storybook": "^7.0.9",
     "typescript": "^5.0.4",
     "vite": "^4.3.1",
     "vitest": "^0.30.1"
