--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "addc": "node --loader ts-node/esm scripts/add.ts",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -28,20 +29,26 @@
     "@storybook/testing-library": "0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^20.1.0",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "chalk": "^5.2.0",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
+    "fs-extra": "^11.1.1",
+    "glob": "^10.2.2",
+    "handlebars": "^4.7.7",
     "jsdom": "^21.1.1",
-    "prop-types": "^15.8.1",
     "sass": "^1.62.0",
     "storybook": "^7.0.9",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.1",
     "vitest": "^0.30.1"
